--- a/css/homework.html
+++ b/css/homework.html
@@ -26,7 +26,7 @@
         <div class="row"></div>
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-6 text-center"><img src="lauren.png"> </div>
+            <div class="col-6 text-center"><img src="Lauren.png"> </div>
             <div class="col-3"></div>
 
         </div>
